--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "annual",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://liangcy.github.io/lottery",
   "dependencies": {
     "antd": "^3.0.3",
     "classnames": "^2.2.5",
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -18,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
